--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 				<section>Slide 4</section>
 				<section>Slide 5</section>
 				<section>Slide 6</section>
+				<section>Slide 7</section>
+				<section>Slide 8</section>
+				<section>Slide 9</section>
+				<section>Slide 10</section>
+				<section>Slide 11</section>
+				<section>Slide 12</section>
 			</div>
 		</div>
 
