--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<img src="https://www.mikroskil.ac.id/bundles/pmbpglobal/images/logo-baru.png" style="height: 200px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
+					Slide 2
+				</section>
 				<section>Slide +3</section>
 				<section>Slide +4</section>
 				<section>Slide +5</section>
