--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
+				<section>
+					<h1>Belajar git commit</h1>
+					Slide 1
+				</section>
 				<section>
 					<img src="https://www.mikroskil.ac.id/bundles/pmbpglobal/images/logo-baru.png" style="height: 200px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo">
 					Slide 2
